--- a/muerteareact/panel.html
+++ b/muerteareact/panel.html
@@ -127,7 +127,10 @@
             }
             $("#users").append("<tr><th>"+dataSet[i].nameUser+"</th>"+
                     "<td>"+dataSet[i].mainEmail+"</td>"+
-                    "<td>"+tipo+"</td></tr>")
+                    "<td>"+tipo+"</td>"+
+                    
+                    "<td>"+"</td>"+
+                    "</tr>")
             i++;
           });
           $("#table").DataTable();
