Login on html and js

--- a/muerteareact/login.html
+++ b/muerteareact/login.html
@@ -68,7 +68,7 @@
         </div> -->
     </div>
     
-    <script async type="text/javascript" src="../js/bulma.js"></script>
+    <!-- SCRIPTS -->
     <script src="js/login.js"></script>
 </body>
 
