--- a/muerteareact/RegistrarProducto.html
+++ b/muerteareact/RegistrarProducto.html
@@ -170,10 +170,10 @@
                             <div class="select is-primary control">
                                 <!--select  multiple size="8"-->
                                   <select>
-                                  <option>Foto Libro</option>
-                                  <option>Foto Regalo</option>
-                                  <option>Marco con foto</option>
-                                  <option>Marco sin foto</option>
+                                  <option>10 x 10</option>
+                                  <option>20 x 40</option>
+                                  <option>50 x 50</option>
+                                  <option>5 x 5</option>
                                 </select>
                               </div>
                         </div>
