--- a/muerteareact/RegistrarProducto.html
+++ b/muerteareact/RegistrarProducto.html
@@ -159,7 +159,19 @@
                       </div>
                     </div>
                   </div>
-
+                  
+                  <div class="field is-horizontal">
+                      <div class="field-label is-normal">
+                        <label class="label">Foto</label>
+                      </div>
+                      <div class="field-body">
+                        <div class="field">
+                          <div class="control">
+                            <input class="input" name="productpic" id="productpic" type="file" autofocus data-validate="require">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
 
                   <div class="field is-horizontal">
                       <div class="field-label is-normal">
