eliminar en fase de pruebas

--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -103,7 +103,26 @@
   <!-- Panel Script -->
   <script type="text/javascript" src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
   <script src="js/panel.js" type="module"></script>
+  
+  <script>
+    /*const ip_server = 'http://' + document.domain + ':3500'
+    function deleteUser(idManagerUser){
 
+      $.ajax({
+          url: ip_server +
+          "/logged/deleteUser",
+          type: "POST",
+          data:{
+              'bearer' : sessionStorage.token,
+              'idManagerUser' : idManagerUser
+          },
+          dataType: "json",
+          success: function (response) {
+              
+          }
+      });
+    }*/
+  </script>
 </body>
 
 </html>
