Many changes, insertUser done

--- a/dashboardadmin/index.html
+++ b/dashboardadmin/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./resources/logo.png">
+    <title>
+        YouPrint Login Dashboard
+    </title>
     <script src="js/jquery-3.4.1.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow|PT+Sans:700|Pontano+Sans&amp;display=swap"
@@ -42,7 +45,7 @@
                 <form novalidate="" class="column is-4 is-offset-4">
                     <div class="column is-8 is-offset-2">
                         <div class="control has-icons-left">
-                            <input id="email" class="input is-large" type="email" placeholder="Correo">
+                            <input id="email" class="input is-large" type="email" placeholder="Correo (Usuario)">
                             <span class="icon is-left">
                                 <i class="fa fa-envelope"></i>
                             </span>
