--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="./resources/logo.png">
   <title>
-    Bulma Dashboard example
+    YouPrint Dashboard
   </title>
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" href="css/dataTables.bulma.min.css" />
@@ -23,10 +24,8 @@
     <!-- left panel -->
     <div class="dashboard-panel is-medium has-thick-padding has-background-grey-lighter is-hidden-mobile" style="height: 100%">
       <div class="has-text-centered">
-        <img src="resources/logo.png" width="50%">
+        <img src="resources/logo.png" width="80%">
       </div>
-
-      <br /><br />
 
       <aside class="menu has-text-white">
         <p class="menu-label">
