--- a/dashboardadmin/usuarios.html
+++ b/dashboardadmin/usuarios.html
@@ -5,10 +5,8 @@
         </span>
     </div>
     <div class="column is-2">
-        <a id="addUser" class="button is-primary modal-button" data-target="#modalAddUser"> <!--  style="color: #1CD5EA" -->
-            <!-- <span class="icon is-large">
-                <i class="fas fa-3x fa-plus-circle"></i>
-            </span> -->Agregar Nuevo
+        <a class="button modal-button colorBlue" data-target="#modalAddUser">
+            Agregar Nuevo
         </a>
     </div>
 </section>
@@ -24,9 +22,6 @@
                 <th>Opciones</th>
             </tr>
         </thead>
-        <tfoot></tfoot>
-        <tbody id="users">
-        </tbody>
     </table>
 </section>
 
@@ -37,14 +32,75 @@
 	<div class="modal-card">
         <header class="modal-card-head">
             <p class="modal-card-title">Registrar nuevo Usuario</p>
-            <button class="delete" aria-label="close"></button>
+            <button class="delete colorPink" aria-label="close"></button>
         </header>
         <section class="modal-card-body">
-        dsjfksjnfkjebskjn
+            <div class="column is-10 is-offset-1">
+                <div class="field">
+                    <label for="mainEmail" class="label">Correo (Usuario):</label>
+                    <p class="control has-icons-left">
+                        <input id="mainEmail" class="input" type="text" placeholder="Correo (Usuario)">
+                        <span class="icon is-small is-left">
+                            <i class="fa fa-envelope"></i>
+                        </span>
+                    </p>
+                </div>
+                <br>
+                <div class="field">
+                    <label for="resetEmail" class="label">Correo para restablecer Contraseña:</label>
+                    <p class="control has-icons-left">
+                        <input id="resetEmail" class="input" type="text" placeholder="Correo">
+                        <span class="icon is-small is-left">
+                            <i class="far fa-envelope"></i>
+                        </span>
+                    </p>
+                </div>
+                <br>
+                <div class="field">
+                    <label for="nameUser" class="label">Nombre:</label>
+                    <p class="control has-icons-left">
+                        <input id="nameUser" class="input" type="text" placeholder="Nombre">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-user"></i>
+                        </span>
+                    </p>
+                </div>
+                <br>
+                <label for="nameUser" class="label">Tipo:</label>
+                <div class="field">
+                    <div class="control">
+                        <div class="select is-fullwidth">
+                            <select id="addTypeUsers">
+                                <option value="-1">Selecciona una Opción</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="field">
+                    <label for="passwordUser" class="label">Contraseña:</label>
+                    <p class="control has-icons-left">
+                        <input id="passwordUser" class="input" type="password" placeholder="Password">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </p>
+                </div>
+                <br>
+                <div class="field">
+                    <label for="cPasswordUser" class="label">Confirmar Contraseña:</label>
+                    <p class="control has-icons-left">
+                        <input id="cPasswordUser" class="input" type="password" placeholder="Password">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                    </p>
+                </div>
+            </div>
         </section>
         <footer class="modal-card-foot">
-            <button class="button is-success" style="float: right">Save changes</button>
-            <button class="button">Cancel</button>
+            <button id="addUser" class="button colorBlue" style="float: right">Registrar</button>
+            <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
         </footer>
     </div>
 </div>
