--- a/dashboardadmin/RegistrarProducto.html
+++ b/dashboardadmin/RegistrarProducto.html
@@ -7,7 +7,6 @@
     <div class="column is-2">
         <a id="returnProduct" class="button colorBlue">
             Regresar
-            
         </a>
     </div>
   </section>
@@ -44,17 +43,13 @@
                 <div class="step-content has-text-centered is-active">
                     <label for="productCategory" class="label">Categoría</label>
                     <div class="field">
-                                <div class="control select ">
-                                    <!--select  multiple size="8"-->
-                                      <select id="productCategory">
-                                      <option>Foto Libro</option>
-                                      <option>Foto Regalo</option>
-                                      <option>Marco con foto</option>
-                                      <option>Marco sin foto</option>
-                                    </select>
-                                  </div>
+                        <div class="control select ">
+                            <!--select  multiple size="8"-->
+                              <select id="addProductCategories">
+                                <option value="-1">Selecciona una Opción</option>
+                            </select>
+                          </div>
                     </div>
-           
                 </div>
   
   
@@ -63,11 +58,8 @@
                     <div class="field">
                         <div class="control select ">
                             <!--select  multiple size="8"-->
-                              <select id="productSubCategory">
-                              <option>Foto Libro</option>
-                              <option>Foto Regalo</option>
-                              <option>Marco con foto</option>
-                              <option>Marco sin foto</option>
+                              <select id="addproductSubCategories">
+                                <option value="-1">Selecciona una Opción</option>
                             </select>
                         </div>
                     </div>
@@ -136,11 +128,8 @@
                         <label class="label" for="productdimens">Dimensiones</label>
                         <div class="control select  is-fullwidth">
                             <!--select  multiple size="8"-->
-                              <select id="productdimens">
-                                  <option>10 x 10</option>
-                                  <option>20 x 40</option>
-                                  <option>50 x 50</option>
-                                  <option>5 x 5</option>
+                              <select id="addProductDimensions">
+                                <option value="-1">Selecciona una Opción (ancho x alto)</option>
                             </select>
                           </div>
                     </div>
