Fix password regex

--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -28,8 +28,8 @@
       </div>
 
       <aside class="menu has-text-white">
-        <p class="menu-label">
-          Administración
+        <p class="menu-label has-text-centered">
+          Administración YouPrint
         </p>
         <ul class="menu-list">
           <li>
@@ -75,8 +75,8 @@
 
     <!-- main section -->
     <div class="dashboard-main is-scrollable" style="width: 100">
-      <nav class="navbar is-fixed-top is-dark">
-        <div class="navbar-menu">
+      <nav class="navbar is-fixed-top is-dark has-text-centered">
+        <div class="navbar-menu has-text-centered">
           <div class="navbar-end">
             <span class="navbar-item">
               <a id="logOut" class="button is-primary is-outlined">Salir</a>
