--- a/dashboardadmin/usuarios.html
+++ b/dashboardadmin/usuarios.html
@@ -183,3 +183,28 @@
             </footer>
         </div>
     </div>
+
+<!-- Modal DeleteUser --> 
+<div id="modalDelUser" class="modal modal-fx-fadeInScale">  
+	<div class="modal-background"></div>  
+	<div class="modal-card">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Confirmación</p>
+            <button class="delete colorPink" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+            <div class="column is-10 is-offset-1">
+                <div class="field">
+                    <label class="label">Desea eliminar usuario?</label>
+
+                </div>
+                <br>
+                
+            </div>
+        </section>
+        <footer class="modal-card-foot">
+            <button id="delUser" class="button colorBlue" style="float: right">Eliminar</button>
+            <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
+        </footer>
+    </div>
+</div>
