set data modalEditUser

--- a/dashboardadmin/usuarios.html
+++ b/dashboardadmin/usuarios.html
@@ -116,9 +116,9 @@
             <section class="modal-card-body">
                 <div class="column is-10 is-offset-1">
                     <div class="field">
-                        <label for="mainEmail" class="label">Correo (Usuario):</label>
+                        <label for="mainEmailUpdate" class="label">Correo (Usuario):</label>
                         <p class="control has-icons-left">
-                            <input id="mainEmail" class="input" type="text" placeholder="Correo (Usuario)">
+                            <input id="mainEmailUpdate" class="input" type="text" placeholder="Correo (Usuario)">
                             <span class="icon is-small is-left">
                                 <i class="fa fa-envelope"></i>
                             </span>
@@ -126,9 +126,9 @@
                     </div>
                     <br>
                     <div class="field">
-                        <label for="resetEmail" class="label">Correo para restablecer Contraseña:</label>
+                        <label for="resetEmailUpdate" class="label">Correo para restablecer Contraseña:</label>
                         <p class="control has-icons-left">
-                            <input id="resetEmail" class="input" type="text" placeholder="Correo">
+                            <input id="resetEmailUpdate" class="input" type="text" placeholder="Correo">
                             <span class="icon is-small is-left">
                                 <i class="far fa-envelope"></i>
                             </span>
@@ -136,20 +136,20 @@
                     </div>
                     <br>
                     <div class="field">
-                        <label for="nameUser" class="label">Nombre:</label>
+                        <label for="nameUserUpdate" class="label">Nombre:</label>
                         <p class="control has-icons-left">
-                            <input id="nameUser" class="input" type="text" placeholder="Nombre">
+                            <input id="nameUserUpdate" class="input" type="text" placeholder="Nombre">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-user"></i>
                             </span>
                         </p>
                     </div>
                     <br>
-                    <label for="nameUser" class="label">Tipo:</label>
+                    <label for="nameUserUpdate" class="label">Tipo:</label>
                     <div class="field">
                         <div class="control">
                             <div class="select is-fullwidth">
-                                <select id="addTypeUsers">
+                                <select id="addTypeUsersUpdate">
                                     <option value="-1">Selecciona una Opción</option>
                                 </select>
                             </div>
@@ -157,9 +157,9 @@
                     </div>
                     <br>
                     <div class="field">
-                        <label for="passwordUser" class="label">Contraseña:</label>
+                        <label for="passwordUserUpdate" class="label">Contraseña:</label>
                         <p class="control has-icons-left">
-                            <input id="passwordUser" class="input" type="password" placeholder="Password">
+                            <input id="passwordUserUpdate" class="input" type="password" placeholder="Password">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-lock"></i>
                             </span>
@@ -167,9 +167,9 @@
                     </div>
                     <br>
                     <div class="field">
-                        <label for="cPasswordUser" class="label">Confirmar Contraseña:</label>
+                        <label for="cPasswordUserUpdate" class="label">Confirmar Contraseña:</label>
                         <p class="control has-icons-left">
-                            <input id="cPasswordUser" class="input" type="password" placeholder="Password">
+                            <input id="cPasswordUserUpdate" class="input" type="password" placeholder="Password">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-lock"></i>
                             </span>
@@ -178,7 +178,7 @@
                 </div>
             </section>
             <footer class="modal-card-foot">
-                <button id="addUser" class="button colorBlue" style="float: right">Registrar</button>
+                <button id="updateUser" class="button colorBlue" style="float: right">Modificar</button>
                 <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
             </footer>
         </div>
