--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -105,8 +105,11 @@
   <script type="text/javascript" src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
   <script src="js/panel.js" type="module"></script>
   <!--Scripts Steps productos-->
-  <script src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.js"></script>
+  <!--<script src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.js"></script>-->
+  <script src="js/bulma-steps.js"></script>
+  
   <script>bulmaSteps.attach();</script>
+  
 </body> 
 
 </html>
