--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -17,13 +17,13 @@
    
     
 <!-- Team -->
-<section id="team" class="columns">
-    <div class="container is-medium box">
+<section id="team" >
+    <div class="container is-medium box" id="contentProducts">
         <div class="columns">
             <!-- Team member -->
             <div class="column ">
                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                    <div class="mainflip">
+                    <div classcolumns="mainflip">
                         <div class="frontside">
                             <div class="card">
                               
