--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -10,6 +10,7 @@
     YouPrint Dashboard
   </title>
   <link rel="stylesheet" href="css/bulma.min.css">
+   <link rel="stylesheet" type="text/css" href="css/bulma.css">
   <link rel="stylesheet" href="css/dataTables.bulma.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="css/bulma-dashboard.min.css">
@@ -19,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/productos.css">
   <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
 </head>
 
 <body>
