--- a/dashboardadmin/RegistrarProducto.html
+++ b/dashboardadmin/RegistrarProducto.html
@@ -94,10 +94,10 @@
                           </p>
                         </div>
                         <div class="field">
-                          <label class="label" for="productdimens">Dimensiones</label>
+                          <label class="label" for="addProductDimensions">Dimensiones</label>
                           <div class="control select  is-fullwidth">
                               <!--select  multiple size="8"-->
-                                <select id="addProductDimensions">
+                                <select name="addProductDimensions" id="addProductDimensions">
                                   <option value="-1">Selecciona una Opción (ancho x alto)</option>
                                   <option value="ej">ej</option>
                               </select>
