Category/Subcategory Calls
Calls to the methods for category and subcategory

--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -17,24 +17,24 @@
         
       </span>
   </div>
-  <div class="column is-2">
+  <div class="column is-3">
     <label class="label" for="searchCategory">Categoría: </label>
     <div class="control select  is-info">
         <!--select  multiple size="8"-->
           <select id="searchCategory" name="searchCategory">
-            <option value="-1">Selecciona una Opción</option>
+            <option value="-1">Seleccione Categoría</option>
             <option value="ej">ej</option>
             <option value="ej">ej</option>
             <option value="ej">ej</option>
         </select>
       </div>
    </div>
-   <div class="column is-2">
+   <div class="column is-3">
     <label class="label" for="searchSubCategory">Subategoría: </label>
     <div class="control select  is-info">
         <!--select  multiple size="8"-->
           <select id="searchSubCategory" class="searchSubCategory">
-            <option value="-1">Selecciona una Opción</option>
+            <option value="-1">Seleccion Subcategoría</option>
             <option value="ej">ej</option>
         </select>
       </div>
