Functions to search and validations
There are some validations for searching and the functions are definied

--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -17,9 +17,9 @@
         
       </span>
   </div>
-    
-        <div style="padding-top: 10px">
-            <a id="searchProduct" class="button is-info is-rounded">
+
+        <div style="padding-top: 36px">
+            <a id="searchProduct" name="searchProduct" class="button is-info is-rounded">
                 <span class='icon'><i class='fas fa-lg fa-search'></i></span>
             </a>
         </div>
