--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -100,7 +100,8 @@
   <script src="https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
   <script src="js/jquery.dataTables.min.js"></script>
   <script src="js/dataTables.bulma.min.js"></script>
-
+  <!--Paginacion de productos-->
+  <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
   <!-- Panel Script -->
   <script type="text/javascript" src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
   <script src="js/panel.js" type="module"></script>
