ws getDimension and load of selects

--- a/dashboardadmin/RegistrarProducto.html
+++ b/dashboardadmin/RegistrarProducto.html
@@ -47,7 +47,6 @@
                             <!--select  multiple size="8"-->
                               <select id="addProductCategories">
                                 <option value="-1">Selecciona una Opción</option>
-                                <option value="ej">ej</option>
                             </select>
                           </div>
                     </div>
@@ -59,9 +58,8 @@
                     <div class="field">
                         <div class="control select ">
                             <!--select  multiple size="8"-->
-                              <select id="addproductSubCategories">
+                              <select id="addProductSubCategories">
                                 <option value="-1">Selecciona una Opción</option>
-                                <option value="ej">ej</option>
                             </select>
                         </div>
                     </div>
@@ -99,7 +97,6 @@
                               <!--select  multiple size="8"-->
                                 <select name="addProductDimensions" id="addProductDimensions">
                                   <option value="-1">Selecciona una Opción (ancho x alto)</option>
-                                  <option value="ej">ej</option>
                               </select>
                             </div>
                          </div>
