--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -1,37 +1,8 @@
 <section class="columns">
-    <div class="column is-2 is-offset-1">
+    <div class="column is-9 is-offset-1">
         <span class="subtitle is-size-3">
                 Productos
         </span>
-    </div>
-    <div class="column is-3">
-        <div class="is-inline" style="padding-right: 20px;"><label class="label is-inline" for="searchCategory">Categoría: </label></div>
-        
-        <div class="control select  is-info is-inline-block">
-            <!--select  multiple size="8"-->
-            <select id="searchCategory" name="searchCategory">
-                <option value="-1">Seleccione Categoría</option>
-                <option value="ej">ej</option>
-                <option value="ej">ej</option>
-                <option value="ej">ej</option>
-            </select>
-        </div>
-    </div>
-    <div class="column is-3">
-        <div class="is-inline" style="padding-right: 20px;"><label class="label is-inline" for="searchSubCategory">Subcategoría: </label></div>
-        <!-- <label class="label" for="searchSubCategory">Subategoría: </label> -->
-        <div class="control select  is-info">
-            <!--select  multiple size="8"-->
-            <select id="searchSubCategory" class="searchSubCategory">
-                <option value="-1">Seleccion Subcategoría</option>
-                <option value="ej">ej</option>
-            </select>
-        </div>
-    </div>
-    <div class="column is-1">
-        <a id="searchProduct" name="searchProduct" class="button is-info is-rounded">
-            <span class='icon'><i class='fas fa-lg fa-search'></i></span>
-        </a>
     </div>
     <div class="column is-2">
         <a  id="addProduct" class="button modal-button colorBlue" data-target="#ModalAddProduct">
@@ -39,6 +10,32 @@
         </a>
     </div>
 </section>
+<section class="columns">
+    <div class="column is-2 is-offset-4">
+        <label class="label" for="searchCategory">Categoría: </label>
+        <div class="control select  is-info">
+            <!--select  multiple size="8"-->
+            <select id="searchCategory" name="searchCategory">
+                <option value="-1">Seleccione Categoría</option>
+            </select>
+        </div>
+    </div>
+    <div class="column is-2">
+        <label class="label" for="searchSubCategory">Subategoría: </label>
+        <div class="control select  is-info">
+            <!--select  multiple size="8"-->
+            <select id="searchSubCategory" class="searchSubCategory">
+                <option value="-1">Seleccion Subcategoría</option>
+            </select>
+            </div>
+        </div>
+    <div  class="column is-1" style="padding-top: 36px">
+        <a id="searchProduct" name="searchProduct" class="button is-info is-rounded">
+            <span class='icon'><i class='fas fa-lg fa-search'></i></span>
+        </a>
+    </div>
+     
+  </section>
 <br>
 <br>
 
