--- a/dashboardadmin/RegistrarProducto.html
+++ b/dashboardadmin/RegistrarProducto.html
@@ -16,7 +16,7 @@
 
 
   <form id="example-advanced-form" action="#">
-      <h3>Account</h3>
+      <h2>Categorí</h2>
       <fieldset style="width: 100%">
           <legend><p class="step-title">Categoría</p></legend>
           <div class="step-content has-text-centered">
@@ -46,7 +46,7 @@
           <p>(*) Mandatory</p>
       </fieldset>
    
-      <h3>Profile</h3>
+      <h2>Subcategoría</h2>
       <fieldset>
           <legend><p class="step-title">Subcategoría</p></legend>
           <label for="productSubCategory" class="label">Subcategoría</label>
@@ -76,7 +76,7 @@
           <p>(*) Mandatory</p>
       </fieldset>
    
-      <h3>Warning</h3>
+      <h2>Info del producto</h2>
       <fieldset>
           <legend><p class="step-title">Info del producto</p></legend>
           <div class="step-content has-text-centered">
@@ -156,7 +156,7 @@
           <p>Please go away ;-)</p>
       </fieldset>
    
-      <h3>Finish</h3>
+      <h2>Fin</h2>
       <fieldset>
           <legend>Terms and Conditions</legend>
    
