--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -21,6 +21,11 @@
   <link rel="stylesheet" type="text/css" href="css/productos.css">
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="css/steps.css">
+
+  
+  
+  
 </head>
 
 <body>
@@ -109,6 +114,12 @@
   <!--Scripts Steps productos-->
   <script src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.js"></script>
   <script>bulmaSteps.attach();</script>
+
+
+  <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.js"></script> 
+  
 </body> 
 
 </html>
