--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/productos.css">
   <script src="js/jquery-3.4.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
   <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
 </head>
 
