--- a/dashboardadmin/RegistrarProducto.html
+++ b/dashboardadmin/RegistrarProducto.html
@@ -16,7 +16,7 @@
 
 
   <form id="example-advanced-form" action="#">
-      <h2>Categorí</h2>
+      <h2>Categoría</h2>
       <fieldset style="width: 100%">
           <legend><p class="step-title">Categoría</p></legend>
           <div class="step-content has-text-centered">
@@ -24,9 +24,9 @@
             <div class="field">
                 <div class="control select ">
                     <!--select  multiple size="8"-->
-                      <select id="addProductCategories">
+                      <select id="addProductCategories" name="addProductCategories">
                         <option value="-1">Selecciona una Opción</option>
-                        <option value="ej">ej</option>
+                        <option value="2">ej</option>
                     </select>
                   </div>
             </div>
@@ -36,10 +36,6 @@
 
 
 
-
-          <label for="userName-2">User name *</label>
-          <input id="userName-2" name="userName" type="text" class="required is-primary">
-          <label for="password-2">Password *</label>
           <input id="password-2" name="password" type="text" class="required">
           <label for="confirm-2">Confirm Password *</label>
           <input id="confirm-2" name="confirm" type="text" class="required is-primary">
@@ -63,14 +59,6 @@
             </div>
         </div>
 
-          <label for="name-2">First name *</label>
-          <input id="name-2" name="name" type="text" class="required">
-          <label for="surname-2">Last name *</label>
-          <input id="surname-2" name="surname" type="text" class="required">
-          <label for="email-2">Email *</label>
-          <input id="email-2" name="email" type="text" class="required email">
-          <label for="address-2">Address</label>
-          <input id="address-2" name="address" type="text">
           <label for="age-2">Age (The warning step will show up if age is less than 18) *</label>
           <input id="age-2" name="age" type="text" class="required number">
           <p>(*) Mandatory</p>
