--- a/dashboardadmin/productos.html
+++ b/dashboardadmin/productos.html
@@ -5,7 +5,7 @@
         </span>
     </div>
     <div class="column is-2">
-        <a  id="addProduct" class="button modal-button colorBlue" data-target="#ModalAddProduct">
+        <a  id="addProduct" class="button modal-button colorBlue">
             Agregar Nuevo
         </a>
     </div>
@@ -57,106 +57,3 @@
     </nav>
 </div>
     
-
-<!-- Modal AddProduct --> 
-<div id="ModalAddProduct" class="modal modal-fx-fadeInScale">  
-	 
-	<div class="modal-card">
-        <header class="modal-card-head">
-            <p class="modal-card-title">Registrar nuevo Producto</p>
-            <button class="delete colorPink" aria-label="close"></button>
-        </header>
-        <section class="modal-card-body">
-            <div class="column is-10 is-offset-1">
-                <div class="field">
-                    <label for="mainEmail" class="label">Correo (Usuario):</label>
-                    <p class="control has-icons-left">
-                        <input id="mainEmail" class="input" type="text" placeholder="Correo (Usuario)">
-                        <span class="icon is-small is-left">
-                            <i class="fa fa-envelope"></i>
-                        </span>
-                    </p>
-                </div>
-                <br>
-                <div class="field">
-                    <label for="resetEmail" class="label">Correo para restablecer Contraseña:</label>
-                    <p class="control has-icons-left">
-                        <input id="resetEmail" class="input" type="text" placeholder="Correo">
-                        <span class="icon is-small is-left">
-                            <i class="far fa-envelope"></i>
-                        </span>
-                    </p>
-                </div>
-                <br>
-                <div class="field">
-                    <label for="nameUser" class="label">Nombre:</label>
-                    <p class="control has-icons-left">
-                        <input id="nameUser" class="input" type="text" placeholder="Nombre">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-user"></i>
-                        </span>
-                    </p>
-                </div>
-                <br>
-                <label for="addTypeUsers" class="label">Tipo:</label>
-                <div class="field">
-                    <div class="control">
-                        <div class="select is-fullwidth">
-                            <select id="addTypeUsers">
-                                <option value="-1">Selecciona una Opción</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="field">
-                    <label for="passwordUser" class="label">Contraseña:</label>
-                    <p class="control has-icons-left">
-                        <input id="passwordUser" class="input" type="password" placeholder="Password">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-lock"></i>
-                        </span>
-                    </p>
-                </div>
-                <br>
-                <div class="field">
-                    <label for="cPasswordUser" class="label">Confirmar Contraseña:</label>
-                    <p class="control has-icons-left">
-                        <input id="cPasswordUser" class="input" type="password" placeholder="Password">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-lock"></i>
-                        </span>
-                    </p>
-                </div>
-        </section>
-        <footer class="modal-card-foot">
-            <button id="addproduct" class="button colorBlue" style="float: right">Registrar</button>
-            <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
-        </footer>
-    </div>
-</div>
-<!-- Modal DeleteProduct --> 
-<div id="modalDelProduct" class="modal modal-fx-fadeInScale">  
-	<div class="modal-background"></div>  
-	<div class="modal-card">
-        <header class="modal-card-head">
-            <p class="modal-card-title">Confirmación</p>
-            <button class="delete colorPink" aria-label="close"></button>
-        </header>
-        <section class="modal-card-body">
-            <div class="column is-10 is-offset-1">
-                <div class="field">
-                    <label class="label">Desea eliminar producto?</label>
-
-                </div>
-                <br>
-                
-            </div>
-        </section>
-        <footer class="modal-card-foot">
-            <button id="delProd" class="button colorBlue" style="float: right">Eliminar</button>
-            <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
-        </footer>
-    </div>
-</div>
-<script src="js/findcat.js"></script>
