--- a/dashboardadmin/kioscos.html
+++ b/dashboardadmin/kioscos.html
@@ -109,40 +109,9 @@
                                 </span>
                             </p>
                         </div>
-                        <br>
-                        <div class="field">
-                                <label for="userKiosk" class="label">Correo (Usuario):</label>
-                                <p class="control has-icons-left">
-                                    <input id="userKiosk" name="userKiosk" class="input" type="text" placeholder="Correo (Usuario)">
-                                    <span class="icon is-small is-left">
-                                        <i class="fa fa-envelope"></i>
-                                    </span>
-                                </p>
-                            </div>
-                        <br>
-                        <div class="field">
-                            <label for="passwordKiosk" class="label">Contraseña:</label>
-                            <p class="control has-icons-left">
-                                <input id="passwordKiosk" class="input" type="password" placeholder="Password">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-lock"></i>
-                                </span>
-                            </p>
-                        </div>
-                        <br>
-                        <div class="field">
-                            <label for="cPasswordKiosk" class="label">Confirmar Contraseña:</label>
-                            <p class="control has-icons-left">
-                                <input id="cPasswordKiosk" class="input" type="password" placeholder="Password">
-                                <span class="icon is-small is-left">
-                                    <i class="fas fa-lock"></i>
-                                </span>
-                            </p>
-                        </div>
-                    </div>
                 </section>
                 <footer class="modal-card-foot">
-                    <button id="editKiosk" class="button colorBlue" style="float: right">Registrar</button>
+                    <button id="updateKiosk" class="button colorBlue" style="float: right">Modificar</button>
                     <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
                 </footer>
             </div>
@@ -165,7 +134,7 @@
                     </div>
                 </section>
                 <footer class="modal-card-foot">
-                    <button id="delKiosco" class="button colorBlue" style="float: right">Eliminar</button>
+                    <button id="delKiosk" class="button colorBlue" style="float: right">Eliminar</button>
                     <button class="button deleteBtn colorPink" style="float: right">Cancelar</button>
                 </footer>
             </div>
