--- a/dashboardadmin/kioscos.html
+++ b/dashboardadmin/kioscos.html
@@ -101,9 +101,9 @@
                 <section class="modal-card-body">
                     <div class="column is-10 is-offset-1">
                         <div class="field">
-                            <label for="nameKiosk" class="label">Nombre del kiosco:</label>
+                            <label for="nameKioskUpdate" class="label">Nombre del kiosco:</label>
                             <p class="control has-icons-left">
-                                <input id="nameKiosk" class="input" type="text" placeholder="Nombre">
+                                <input id="nameKioskUpdate" class="input" type="text" placeholder="Nombre">
                                 <span class="icon is-small is-left">
                                     <i class="fas fa-user"></i>
                                 </span>
