--- a/dashboardadmin/panel.html
+++ b/dashboardadmin/panel.html
@@ -10,13 +10,22 @@
     YouPrint Dashboard
   </title>
   <link rel="stylesheet" href="css/bulma.min.css">
+   <link rel="stylesheet" type="text/css" href="css/bulma.css">
   <link rel="stylesheet" href="css/dataTables.bulma.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   <link rel="stylesheet" href="css/bulma-dashboard.min.css">
   <link  rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/css/bulma-steps.min.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/productos.css">
   <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="css/steps.css">
+
+  
+  
+  
 </head>
 
 <body>
@@ -47,7 +56,7 @@
             </a>
           </li>
           <li>
-            <a id="Kioscos">
+            <a id="Kioscos"> 
               <span class="icon">
                 <i class="fas fa-bezier-curve"></i>
               </span> Kioscos
@@ -102,7 +111,15 @@
   <!-- Panel Script -->
   <script type="text/javascript" src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
   <script src="js/panel.js" type="module"></script>
+  <!--Scripts Steps productos-->
+  <script src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.js"></script>
+  <script>bulmaSteps.attach();</script>
 
-</body>
+
+  <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-steps/1.1.0/jquery.steps.js"></script> 
+  
+</body> 
 
 </html>
