--- a/ecommerce/menu.html
+++ b/ecommerce/menu.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/css/bulma-steps.min.css">
   <link rel="stylesheet" type="text/css" href="css/home.css">
   <link rel="stylesheet" type="text/css" href="css/productos.css">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
   <script src="js/jquery-3.4.1.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
   <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
@@ -103,38 +105,34 @@
                         <div class="navbar-dropdown">
                           <div class="columns">
                             <div class="column">
-                                <a class="navbar-item">
-                                    <img  src="resources/logo.png" >
-                                  </a>
-                                  <a class="navbar-item">
-                                    Jobs
-                                    <img  src="resources/logo.png" >
-                                  </a>
+                                <span id="titMenu" class="navbar-item">
+                                    Artículos Personalizados<br>
+                                </span>
+                                <img  src="resources/blur-blurred-book-pages-46274.jpg" alt="img2">
                             </div>
                             <div class="column">
+                              <br><br>
                                 <a class="navbar-item">
-                                    About
+                                   * About
                                   </a>
                                   <a class="navbar-item">
-                                    Jobs
+                                   * Jobs
                                   </a>
                                   <a class="navbar-item">
-                                    Contact
+                                   * Contact
                                   </a>
                                   <hr class="navbar-divider">
                                   <a class="navbar-item">
-                                    Report an issue
+                                  * Report an issue
                                   </a>
                             </div>
                             <div class="column">
-                                <a class="navbar-item">
-                                    Contact
-                                  </a>
-                                  <hr class="navbar-divider">
-                                  <a class="navbar-item">
-                                    Report an issue
-                                  </a>
-                                  
+                              <br><br>
+                                <img  src="resources/pexels-photo-970076.jpeg" alt="img1">
+                                <br>
+                                <span class="navbar-item">
+                                  <strong> ¡Conócelos!</strong>
+                                </span>
                             </div>
                           </div>
                           
