--- a/ecommerce/menu.html
+++ b/ecommerce/menu.html
@@ -135,7 +135,7 @@
 
   <div id="main">
     <!-- Start Hero Carousel -->
-    <section class="hero is-medium has-carousel" style="padding-top: 120px;">
+    <section class="hero is-large has-carousel" style="padding-top: 120px;">
       <div id="carousel-demo" class="hero-carousel">
         <div class="item-1">
           <img src="resources/house.jpg" />
@@ -183,7 +183,7 @@
     // })
     bulmaCarousel.attach('.hero-carousel', {
       slidesToScroll: 1,
-      slidesToShow: 1,
+      slidesToShow: 3,
       pagination: false,
       effect: 'fade',
       loop: true
