--- a/ecommerce/menu.html
+++ b/ecommerce/menu.html
@@ -74,15 +74,14 @@
         </div>
       </div>
     </nav>
-
     <div id="MenuEcommerce">
       <nav id="secondNav" class="navbar is-fixed-top is-purple has-text-centered" style="margin-top: 68px;">
         <div class="navbar-menu has-text-centered">
-          <div id="contMenuCats" class="navbar-start" style="padding-left: 100px;">
+          <div class="navbar-start" style="padding-left: 100px;">
             <a class="navbar-item">
               Foto-Libros
             </a>
-            <select id="pruebaEste">este</select>
+
             <a class="navbar-item">
               Foto-Regalos
             </a>
@@ -173,7 +172,6 @@
   <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
   <!-- Panel Script -->
   <script type="text/javascript" src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
-  <script src="js/menu.js" type="module"></script>
   <!--<script src="js/panel.js" type="module"></script>-->
   <!--Scripts Steps productos-->
   <!--<script src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.js"></script>-->
