--- a/ecommerce/menu.html
+++ b/ecommerce/menu.html
@@ -283,6 +283,39 @@
 
   </div>
 
+
+  
+
+  <section class="footerEcommerce">
+    <div class="firstFooter">
+      <div class="line">
+          <hr></hr>
+      </div>
+      <div class="pBody columns">
+        <div class="column">
+          <h6>Sucursales</h6>
+          <p>
+              Centro <br>
+              Aquiles Serdán No. 521, Col. Centro C.P. 58000. Morelia, Mich. <br>
+              Tel. (443) 3 13 96 94
+          </p>
+        </div>
+        <div class="column">
+          <h6>General</h6>
+          <p>
+              <a>Terminos y condiciones</a>
+              
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="secondFooter has-text-centered">
+        Todos los derechos reservados
+    </div>
+  </section>
+
+
+
   <!-- Scripts DataTables -->
   <script src="https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
   <!--Paginacion de productos-->
