--- a/ecommerce/menu.html
+++ b/ecommerce/menu.html
@@ -257,13 +257,13 @@
     <section class="hero is-large has-carousel" style="padding-top: 120px;">
       <div id="carousel-products" class="hero-carousel">
         <div class="item-1">
-          <img src="resources/house.jpg" />
+          <img src="resources/hand-iphone-iphone-6-373976.jpg" />
         </div>
         <div class="item-2">
-          <img src="resources/pexels-photo-970076.jpeg" alt="img1">
+          <img src="resources/bookcase.jpg" alt="img1">
         </div>
         <div class="item-3">
-          <img src="resources/blur-blurred-book-pages-46274.jpg" alt="img2">
+          <img src="resources/background-notebook-pencil-544115.jpg" alt="img2">
         </div>
       </div>
       <div class="hero-head"></div>
@@ -470,16 +470,11 @@
                             </div>
                           </div>
                       </div>
-                      <div class="hero-head"></div>
-                      <div class="hero-body"></div>
-                      <div class="hero-foot"></div>
+                      <div class="hero-body" style="height: 350px; padding: 0px;"></div>
                     </section>
                     <!-- End Hero Carousel -->
               </section>
-
           </div>
-          
-
     </section>
   </div>
 
