Some fix on menu.html

--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -67,7 +67,9 @@
             <nav id="secondNav" class="navbar is-fixed-top is-purple has-text-centered" style="margin-top: 68px;">
             <div class="navbar-menu has-text-centered">
                 <div class="navbar-start" style="padding-left: 100px;">
-    
+                    <a class="navbar-item" href="index.html">
+                        Home
+                    </a>
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
                     Foto-Libros
